web/parser/FlowParser.js
// Generated from grammar/Flow.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import FlowListener from './FlowListener.js';
import FlowVisitor from './FlowVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class FlowParser extends antlr4.Parser {

    static grammarFileName = "Flow.g4";
    static literalNames = [ null, "','", "'('", "')'", "'|'", "'{'", "'}'", 
                            "'='", "'!='", "'=~'", "'!~'", "'+'", "'-'", 
                            "'*'", "'/'", "'by'", "'without'", null, null, 
                            "'let'", "'in'", "'and'", "'or'", "'unless'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, "MATCH_EQ", 
                             "MATCH_NEQ", "MATCH_RE", "MATCH_NRE", "OP_ADD", 
                             "OP_SUB", "OP_MUL", "OP_DIV", "BY", "WITHOUT", 
                             "AGGREGATION_OP", "DURATION", "LET", "IN", 
                             "AND", "OR", "UNLESS", "NUMBER", "DURATION_UNIT", 
                             "IDENTIFIER", "STRING", "COMMENT", "MULTILINE_COMMENT", 
                             "WS" ];
    static ruleNames = [ "query", "letExpression", "letBinding", "binaryExpression", 
                         "binaryOperator", "primaryExpression", "pipeline", 
                         "pipelineStep", "selector", "labelMatcher", "aggregation", 
                         "function", "aligner" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FlowParser.ruleNames;
        this.literalNames = FlowParser.literalNames;
        this.symbolicNames = FlowParser.symbolicNames;
    }



	query() {
	    let localctx = new QueryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, FlowParser.RULE_query);
	    try {
	        this.state = 32;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 26;
	            this.letExpression();
	            this.state = 27;
	            this.match(FlowParser.EOF);
	            break;
	        case -1:
	        case 4:
	        case 5:
	        case 26:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 29;
	            this.pipeline();
	            this.state = 30;
	            this.match(FlowParser.EOF);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	letExpression() {
	    let localctx = new LetExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, FlowParser.RULE_letExpression);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 34;
	        this.match(FlowParser.LET);
	        this.state = 35;
	        this.letBinding();
	        this.state = 40;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1) {
	            this.state = 36;
	            this.match(FlowParser.T__0);
	            this.state = 37;
	            this.letBinding();
	            this.state = 42;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 43;
	        this.match(FlowParser.IN);
	        this.state = 44;
	        this.binaryExpression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	letBinding() {
	    let localctx = new LetBindingContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, FlowParser.RULE_letBinding);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        this.match(FlowParser.IDENTIFIER);
	        this.state = 47;
	        this.match(FlowParser.MATCH_EQ);
	        this.state = 48;
	        this.pipeline();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	binaryExpression() {
	    let localctx = new BinaryExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, FlowParser.RULE_binaryExpression);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 50;
	        this.primaryExpression();
	        this.state = 56;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 30720) !== 0)) {
	            this.state = 51;
	            this.binaryOperator();
	            this.state = 52;
	            this.primaryExpression();
	            this.state = 58;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	binaryOperator() {
	    let localctx = new BinaryOperatorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, FlowParser.RULE_binaryOperator);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 30720) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primaryExpression() {
	    let localctx = new PrimaryExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, FlowParser.RULE_primaryExpression);
	    try {
	        this.state = 67;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 26:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 61;
	            this.match(FlowParser.IDENTIFIER);
	            break;
	        case 24:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 62;
	            this.match(FlowParser.NUMBER);
	            break;
	        case 2:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 63;
	            this.match(FlowParser.T__1);
	            this.state = 64;
	            this.binaryExpression();
	            this.state = 65;
	            this.match(FlowParser.T__2);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pipeline() {
	    let localctx = new PipelineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, FlowParser.RULE_pipeline);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.selector();
	        this.state = 74;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4) {
	            this.state = 70;
	            this.match(FlowParser.T__3);
	            this.state = 71;
	            this.pipelineStep();
	            this.state = 76;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pipelineStep() {
	    let localctx = new PipelineStepContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, FlowParser.RULE_pipelineStep);
	    try {
	        this.state = 80;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 77;
	            this.aggregation();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 78;
	            this.aligner();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 79;
	            this.function_();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	selector() {
	    let localctx = new SelectorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, FlowParser.RULE_selector);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 83;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 82;
	            this.match(FlowParser.IDENTIFIER);
	        }

	        this.state = 97;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 85;
	            this.match(FlowParser.T__4);
	            this.state = 94;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===26) {
	                this.state = 86;
	                this.labelMatcher();
	                this.state = 91;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===1) {
	                    this.state = 87;
	                    this.match(FlowParser.T__0);
	                    this.state = 88;
	                    this.labelMatcher();
	                    this.state = 93;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            this.state = 96;
	            this.match(FlowParser.T__5);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	labelMatcher() {
	    let localctx = new LabelMatcherContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, FlowParser.RULE_labelMatcher);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 99;
	        this.match(FlowParser.IDENTIFIER);
	        this.state = 100;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1920) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 101;
	        this.match(FlowParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aggregation() {
	    let localctx = new AggregationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, FlowParser.RULE_aggregation);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 103;
	        this.match(FlowParser.AGGREGATION_OP);
	        this.state = 104;
	        _la = this._input.LA(1);
	        if(!(_la===15 || _la===16)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 117;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 105;
	            this.match(FlowParser.T__1);
	            this.state = 114;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===26) {
	                this.state = 106;
	                this.match(FlowParser.IDENTIFIER);
	                this.state = 111;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===1) {
	                    this.state = 107;
	                    this.match(FlowParser.T__0);
	                    this.state = 108;
	                    this.match(FlowParser.IDENTIFIER);
	                    this.state = 113;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            this.state = 116;
	            this.match(FlowParser.T__2);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	function_() {
	    let localctx = new FunctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, FlowParser.RULE_function);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this.match(FlowParser.IDENTIFIER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aligner() {
	    let localctx = new AlignerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, FlowParser.RULE_aligner);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 121;
	        this.match(FlowParser.IDENTIFIER);
	        this.state = 122;
	        this.match(FlowParser.DURATION);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

FlowParser.EOF = antlr4.Token.EOF;
FlowParser.T__0 = 1;
FlowParser.T__1 = 2;
FlowParser.T__2 = 3;
FlowParser.T__3 = 4;
FlowParser.T__4 = 5;
FlowParser.T__5 = 6;
FlowParser.MATCH_EQ = 7;
FlowParser.MATCH_NEQ = 8;
FlowParser.MATCH_RE = 9;
FlowParser.MATCH_NRE = 10;
FlowParser.OP_ADD = 11;
FlowParser.OP_SUB = 12;
FlowParser.OP_MUL = 13;
FlowParser.OP_DIV = 14;
FlowParser.BY = 15;
FlowParser.WITHOUT = 16;
FlowParser.AGGREGATION_OP = 17;
FlowParser.DURATION = 18;
FlowParser.LET = 19;
FlowParser.IN = 20;
FlowParser.AND = 21;
FlowParser.OR = 22;
FlowParser.UNLESS = 23;
FlowParser.NUMBER = 24;
FlowParser.DURATION_UNIT = 25;
FlowParser.IDENTIFIER = 26;
FlowParser.STRING = 27;
FlowParser.COMMENT = 28;
FlowParser.MULTILINE_COMMENT = 29;
FlowParser.WS = 30;

FlowParser.RULE_query = 0;
FlowParser.RULE_letExpression = 1;
FlowParser.RULE_letBinding = 2;
FlowParser.RULE_binaryExpression = 3;
FlowParser.RULE_binaryOperator = 4;
FlowParser.RULE_primaryExpression = 5;
FlowParser.RULE_pipeline = 6;
FlowParser.RULE_pipelineStep = 7;
FlowParser.RULE_selector = 8;
FlowParser.RULE_labelMatcher = 9;
FlowParser.RULE_aggregation = 10;
FlowParser.RULE_function = 11;
FlowParser.RULE_aligner = 12;

class QueryContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_query;
    }

	letExpression() {
	    return this.getTypedRuleContext(LetExpressionContext,0);
	};

	EOF() {
	    return this.getToken(FlowParser.EOF, 0);
	};

	pipeline() {
	    return this.getTypedRuleContext(PipelineContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterQuery(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitQuery(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitQuery(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LetExpressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_letExpression;
    }

	LET() {
	    return this.getToken(FlowParser.LET, 0);
	};

	letBinding = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(LetBindingContext);
	    } else {
	        return this.getTypedRuleContext(LetBindingContext,i);
	    }
	};

	IN() {
	    return this.getToken(FlowParser.IN, 0);
	};

	binaryExpression() {
	    return this.getTypedRuleContext(BinaryExpressionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterLetExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitLetExpression(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitLetExpression(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LetBindingContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_letBinding;
    }

	IDENTIFIER() {
	    return this.getToken(FlowParser.IDENTIFIER, 0);
	};

	MATCH_EQ() {
	    return this.getToken(FlowParser.MATCH_EQ, 0);
	};

	pipeline() {
	    return this.getTypedRuleContext(PipelineContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterLetBinding(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitLetBinding(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitLetBinding(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BinaryExpressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_binaryExpression;
    }

	primaryExpression = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PrimaryExpressionContext);
	    } else {
	        return this.getTypedRuleContext(PrimaryExpressionContext,i);
	    }
	};

	binaryOperator = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(BinaryOperatorContext);
	    } else {
	        return this.getTypedRuleContext(BinaryOperatorContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterBinaryExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitBinaryExpression(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitBinaryExpression(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BinaryOperatorContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_binaryOperator;
    }

	OP_ADD() {
	    return this.getToken(FlowParser.OP_ADD, 0);
	};

	OP_SUB() {
	    return this.getToken(FlowParser.OP_SUB, 0);
	};

	OP_MUL() {
	    return this.getToken(FlowParser.OP_MUL, 0);
	};

	OP_DIV() {
	    return this.getToken(FlowParser.OP_DIV, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterBinaryOperator(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitBinaryOperator(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitBinaryOperator(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PrimaryExpressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_primaryExpression;
    }

	IDENTIFIER() {
	    return this.getToken(FlowParser.IDENTIFIER, 0);
	};

	NUMBER() {
	    return this.getToken(FlowParser.NUMBER, 0);
	};

	binaryExpression() {
	    return this.getTypedRuleContext(BinaryExpressionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterPrimaryExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitPrimaryExpression(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitPrimaryExpression(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PipelineContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_pipeline;
    }

	selector() {
	    return this.getTypedRuleContext(SelectorContext,0);
	};

	pipelineStep = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PipelineStepContext);
	    } else {
	        return this.getTypedRuleContext(PipelineStepContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterPipeline(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitPipeline(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitPipeline(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PipelineStepContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_pipelineStep;
    }

	aggregation() {
	    return this.getTypedRuleContext(AggregationContext,0);
	};

	aligner() {
	    return this.getTypedRuleContext(AlignerContext,0);
	};

	function_() {
	    return this.getTypedRuleContext(FunctionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterPipelineStep(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitPipelineStep(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitPipelineStep(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class SelectorContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_selector;
    }

	IDENTIFIER() {
	    return this.getToken(FlowParser.IDENTIFIER, 0);
	};

	labelMatcher = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(LabelMatcherContext);
	    } else {
	        return this.getTypedRuleContext(LabelMatcherContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterSelector(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitSelector(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitSelector(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class LabelMatcherContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_labelMatcher;
    }

	IDENTIFIER() {
	    return this.getToken(FlowParser.IDENTIFIER, 0);
	};

	STRING() {
	    return this.getToken(FlowParser.STRING, 0);
	};

	MATCH_EQ() {
	    return this.getToken(FlowParser.MATCH_EQ, 0);
	};

	MATCH_NEQ() {
	    return this.getToken(FlowParser.MATCH_NEQ, 0);
	};

	MATCH_RE() {
	    return this.getToken(FlowParser.MATCH_RE, 0);
	};

	MATCH_NRE() {
	    return this.getToken(FlowParser.MATCH_NRE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterLabelMatcher(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitLabelMatcher(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitLabelMatcher(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AggregationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_aggregation;
    }

	AGGREGATION_OP() {
	    return this.getToken(FlowParser.AGGREGATION_OP, 0);
	};

	BY() {
	    return this.getToken(FlowParser.BY, 0);
	};

	WITHOUT() {
	    return this.getToken(FlowParser.WITHOUT, 0);
	};

	IDENTIFIER = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(FlowParser.IDENTIFIER);
	    } else {
	        return this.getToken(FlowParser.IDENTIFIER, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterAggregation(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitAggregation(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitAggregation(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FunctionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlowParser.RULE_function;
    }

	IDENTIFIER() {
	    return this.getToken(FlowParser.IDENTIFIER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.enterFunction(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlowListener ) {
	        listener.exitFunction(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlowVisitor ) {
	        return visitor.visitFunction(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AlignerContext extends antlr4.ParserRuleContext {
